Revert to Java 21 as required, keep Kafka dependencies
Co-authored-by: TheStackTraceWhisperer <4791708+TheStackTraceWhisperer@users.noreply.github.com>